Add strings in internal AST

--- a/dir/src/Makefile
+++ b/dir/src/Makefile
@@ -1,4 +1,7 @@
-all:
+all: grammar
+
+grammar: Javalette.cf
+	bnfc -haskell Javalette.cf
 	happy -gca ParJavalette.y
 	alex -g LexJavalette.x
 	ghc --make TestJavalette.hs -o TestJavalette
@@ -8,6 +11,7 @@ clean:
 	-rm -f DocJavalette.ps
 
 distclean: clean
-	-rm -f DocJavalette.* LexJavalette.* ParJavalette.* LayoutJavalette.* SkelJavalette.* PrintJavalette.* TestJavalette.* AbsJavalette.* TestJavalette ErrM.* SharedString.* ComposOp.* Javalette.dtd XMLJavalette.* Makefile*
+	-rm -f DocJavalette.* LexJavalette.* ParJavalette.* LayoutJavalette.* SkelJavalette.* PrintJavalette.* TestJavalette.* AbsJavalette.* TestJavalette ErrM.* SharedString.* ComposOp.* Javalette.dtd XMLJavalette.*
 	
+
 
