Modify makefile and resubmit

--- a/dir/src/Makefile
+++ b/dir/src/Makefile
@@ -1,22 +1,13 @@
-all: checkers
+all: compiler
 
-checkers: TypeChecker.o ReturnChecker.o Main.o
-
-TypeChecker.o: TypeChecker.hs ParJavalette.o
-	ghc TypeChecker.hs
-
-ReturnChecker.o: ReturnChecker.hs ParJavalette.o
-	ghc ReturnChecker.hs
-
-Main.o: Main.hs TypeChecker.o ReturnChecker.o
+compiler: Main.hs TypeChecker.hs ReturnChecker.hs ParJavalette.hs
 	ghc Main.hs
 
-ParJavalette.o: LexJavalette.x ParJavalette.y
+ParJavalette.hs: ParJavalette.y
 	alex -g LexJavalette.x
 	happy -gca ParJavalette.y
-	ghc TestJavalette.hs -o TestJavalette
 
-LexJavalette.x: Javalette.cf
+ParJavalette.y: Javalette.cf
 	bnfc Javalette.cf
 
 clean:
