Modify makefile to not compile Main when it's not modified

--- a/dir/src/Makefile
+++ b/dir/src/Makefile
@@ -1,6 +1,6 @@
-all: compiler
+all: Main
 
-compiler: Main.hs TypeChecker.hs ReturnChecker.hs ParJavalette.hs
+Main: Main.hs TypeChecker.hs ReturnChecker.hs ParJavalette.hs
 	ghc Main.hs
 
 ParJavalette.hs: ParJavalette.y
